# QCommandPalette

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  QCommandPalette.cpp  QCommandPalette.h  README.md  justfile  main.cpp  translation_de.ts
example/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  main.cpp
include/: AbstractCommandPaletteEngine.hpp  AbstractCommandPaletteWidget.hpp  FuzzyCommandPaletteEngine.hpp  SimpleCommandPaletteEngine.hpp  SimpleCommandPaletteWidget.hpp  TestForm.hpp
source/: AbstractCommandPaletteEngine.cpp  AbstractCommandPaletteWidget.cpp  FuzzyCommandPaletteEngine.cpp  SimpleCommandPaletteEngine.cpp  SimpleCommandPaletteWidget.cpp  TestForm.cpp
ui/: MainWindow.ui  SimpleCommandPaletteWidget.ui  TestForm.ui
